--- a/index.html
+++ b/index.html
@@ -14,22 +14,30 @@
     </style>
   </head>
   <body>
-    <ul id="messages"></ul>
-    <form action="">
+    
+    <ul id="messages"><li id='sum'></li></ul>
+    <form  id = 'bottom' action="">
       <input id="m" autocomplete="off" /><button>Send</button>
     </form>
     <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
     <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
     <script>
       var socket = io();
-      $('form').submit(function(){
+      $('#bottom').submit(function(){
         socket.emit('chat message', $('#m').val());
         $('#m').val('');
         return false;
       });
+      socket.on('sum message', function(msg){
+        $('#sum').text(msg);
+        // $('#messages').append($('<li>').text(msg));
+      });
       socket.on('chat message', function(msg){
+        // $('#sum').text(msg);
         $('#messages').append($('<li>').text(msg));
       });
+
+
     </script>
   </body>
 </html>
